<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.CreateAccountInfoItemActivity">

    <EditText
        android:id="@+id/edittext_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/edittext_owner"
        android:ems="10" />

    <EditText
        android:id="@+id/edittext_accountnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_owner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:hint="@string/edittext_accountnumber" />

    <EditText
        android:id="@+id/edittext_biccode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_accountnumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:hint="@string/edittext_biccode" />

    <TextView
        android:id="@+id/textview_forminfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_biccode"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        android:text="@string/createaccountinfo_form_info"
        android:textColor="@color/textDark" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/cancel"
        android:layout_below="@+id/textview_forminfo"
        android:layout_toLeftOf="@+id/button_add"
        android:layout_toStartOf="@+id/button_add"
        android:onClick="openMainActivityOnCancelButtonClick" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add"
        android:layout_below="@+id/textview_forminfo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="createAccountInfoItemOnAddButtonClick" />

</RelativeLayout>
